# agentic_ai

./: .env.example  .gitignore  1-build-basic-chatbot.py  2-add-tools.py  3-add-memory.py  agent_calc.py  day09_Reflection.py  day11_MultiAgent.py  day12_MultiAgentChat.py  day14_langchain.py  day14_langgraph.py  day15_LangGraph.py  day20_multi_mcp.py  day7_PlanExecute.py  day8_ReAct.py  litellm_run_example.py  main.py  mlflow_1_create_qa_dataset.py  mlflow_2_evaluate_model.py  mlflow_3_optimize_prompt.py  pyproject.toml
Model_First_Reasoning_LLM_Agents/: README.md  run_mfr_agent.py
agentic_ai_tutorial/: README.md  day10_memory.py  day12_MultiAgentChat.py  day17_lang_tool_advence.py  day17_lang_tool_easy.py  day18_mcp.py  day21_PlanningReAct.py  day22_LangGraphLangChainMCP.py  day23_Reflection×Memory.py
browser_use_get_started/: browser_use_run.py
deep_agent_get_started/: deep_started.py
fastmcp_get_started/: code_interpreter.md  langgraph_use_mcp_as_client.py  langgraph_use_mcp_as_server.py  mcp_server_sample.py
huggingface_get_started/: hg_create_image.py
langgraph_get_started/: README.md  react_agent.py  run_langgraph.ipynb
litellm_get_started/: run_litellm_while_loop.py
litellm_mcp_get_started/: mcp_continue_run.py  mcp_request.py
mlflow_get_started/: README.md  mlflow_1_create_qa_dataset.py  mlflow_2_evaluate_model.py  mlflow_3_optimize_prompt.py  run_mlflow.ipynb
optuna_get_started/: optuna_get_started.py
